--- a/style.css
+++ b/style.css
@@ -97,6 +97,29 @@ select {
   padding: 1rem;
   font-size: 1rem;
 }
+.mute.active {
+  background: rgb(148, 148, 148);
+}
+.tempo {
+  margin: 3rem;
+  width: 30%;
+}
+.tempo-slider {
+  padding: 0.2rem;
+  -webkit-appearance: none;
+  margin: 1rem 0rem;
+  width: 100%;
+  position: relative;
+  background: rgb(240, 136, 18);
+  cursor: pointer;
+  border-radius: 1rem;
+}
+
+.tempo p {
+  font-size: 1.5rem;
+  margin: 2rem;
+  text-align: center;
+}
 
 @keyframes playTrack {
   from {
