--- a/style.css
+++ b/style.css
@@ -129,3 +129,56 @@ select {
     transform: scale(1.2);
   }
 }
+
+
+@media (max-width: 768px) { 
+  .hihat-track,.snare-track, .kick-track {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
+    margin-top: 2rem;
+  }
+
+  .kick, .snare, .hithat {
+    display: flex;
+    width: 100%;
+  }
+
+  .controls h1 {
+    font-size: 1.5rem;
+    margin-right: 20px;
+  }
+
+  .controls button {
+    padding: .5rem;
+    border: none;
+    background: rgb(238, 225, 112);
+    font-size: 1rem;
+    cursor: pointer;
+    transition: all 0.5s ease;
+    border-radius: 5px;
+    margin-right: 20px;
+  }
+
+  select {
+    padding: .8rem;
+    font-size: .8rem;
+  }
+
+  .play {
+    margin-top: 1rem;
+    font-size: 1rem;
+  }
+
+  .tempo {
+    width: 100%;
+    margin: 1rem;
+  }
+
+  .tempo p {
+    font-size: 1.5rem;
+    margin: 1rem;
+  }
+}
